add entity model mesh